nginx-web.yaml
##方式一:运行容器
apiVersion: v1
kind: Pod
metadata:
  name: nginx-web
  labels:
    app: nginx-web
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80

##方式二:可复制   
apiVersion: v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    app: nginx-web2
  template:
    metadata:
      name: nginx-web2
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
